loop to generate augmented images and points

--- a/model.ipynb
+++ b/model.ipynb
@@ -317,13 +317,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n",
+      "same images and points\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-147-dbadfaa80166>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[1;31m#Generate image and 9 keypoints to ensure cat face is in frame\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m         \u001b[0mimage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpoints\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtransformImage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     25\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mpoints\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m18\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'same images and points'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-94-5fbfd1ddc6c0>\u001b[0m in \u001b[0;36mtransformImage\u001b[1;34m(i)\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[0mnew_points\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpoint\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpoint\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m     \u001b[0mimage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'cats/'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mimg_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[0mimage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcvtColor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCOLOR_BGR2RGB\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "for i in range(len(cat_df)):\n",
-    "    image, points = transformImage(i)\n",
-    "    break"
+    "    #ensure points are positive\n",
+    "    points = cat_df.iloc[i, 2:]\n",
+    "    arr=[]\n",
+    "    for num in points:\n",
+    "        arr.append(num)\n",
+    "    if any(n < 0 for n in arr):\n",
+    "        continue\n",
+    "    #ensure points can fit in a 224x224 image\n",
+    "    arr_x = []\n",
+    "    arr_y = []\n",
+    "    for i in range(len(points)):\n",
+    "        if i % 2 == 0:\n",
+    "            arr_x.append(points[i])\n",
+    "        else:\n",
+    "            arr_y.append(points[i])\n",
+    "    if (max(arr_x) - min(arr_x) > 196):\n",
+    "        continue\n",
+    "    if (max(arr_y) - min(arr_y) > 196):\n",
+    "        continue\n",
+    "\n",
+    "    #Generate image and 9 keypoints to ensure cat face is in frame\n",
+    "    while True:\n",
+    "        image, points = transformImage(i)\n",
+    "        if points.size == 18:\n",
+    "            print('same images and points')\n",
+    "            break\n"
    ]
   },
   {
