--- a/data_augmentation.ipynb
+++ b/data_augmentation.ipynb
@@ -324,57 +324,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n",
-      "same images and points\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-147-dbadfaa80166>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     22\u001b[0m     \u001b[1;31m#Generate image and 9 keypoints to ensure cat face is in frame\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m         \u001b[0mimage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpoints\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtransformImage\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     25\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mpoints\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m18\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'same images and points'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-94-5fbfd1ddc6c0>\u001b[0m in \u001b[0;36mtransformImage\u001b[1;34m(i)\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[0mnew_points\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpoint\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpoint\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m     \u001b[0mimage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'cats/'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mimg_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m     \u001b[0mimage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcvtColor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCOLOR_BGR2RGB\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "           img_name  left_eye_x  left_eye_y  right_eye_x  right_eye_y  \\\n",
+       "0  00000001_000.jpg       103.0        98.0        140.0         97.0   \n",
+       "1  00000001_008.jpg       115.0        68.0        152.0         67.0   \n",
+       "2  00000001_012.jpg       127.0        97.0        164.0         96.0   \n",
+       "3  00000001_016.jpg        63.0       114.0        100.0        113.0   \n",
+       "4  00000001_024.jpg       111.0       140.0        148.0        139.0   \n",
+       "\n",
+       "   mouth_x  mouth_y  left_ear_1_x  left_ear_1_y  left_ear_2_x  left_ear_2_y  \\\n",
+       "0    123.0    130.0          53.0          73.0          62.0          30.0   \n",
+       "1    135.0    100.0          65.0          43.0          74.0           0.0   \n",
+       "2    147.0    129.0          77.0          72.0          86.0          29.0   \n",
+       "3     83.0    146.0          13.0          89.0          22.0          46.0   \n",
+       "4    131.0    172.0          61.0         115.0          70.0          72.0   \n",
+       "\n",
+       "   left_ear_3_x  left_ear_3_y  right_ear_1_x  right_ear_1_y  right_ear_2_x  \\\n",
+       "0          93.0          50.0          136.0           49.0          173.0   \n",
+       "1         105.0          20.0          148.0           19.0          185.0   \n",
+       "2         117.0          49.0          160.0           48.0          197.0   \n",
+       "3          53.0          66.0           96.0           65.0          133.0   \n",
+       "4         101.0          92.0          144.0           91.0          181.0   \n",
+       "\n",
+       "   right_ear_2_y  right_ear_3_x  right_ear_3_y  \n",
+       "0           31.0          159.0           69.0  \n",
+       "1            1.0          171.0           39.0  \n",
+       "2           30.0          183.0           68.0  \n",
+       "3           47.0          119.0           85.0  \n",
+       "4           73.0          167.0          111.0  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>img_name</th>\n      <th>left_eye_x</th>\n      <th>left_eye_y</th>\n      <th>right_eye_x</th>\n      <th>right_eye_y</th>\n      <th>mouth_x</th>\n      <th>mouth_y</th>\n      <th>left_ear_1_x</th>\n      <th>left_ear_1_y</th>\n      <th>left_ear_2_x</th>\n      <th>left_ear_2_y</th>\n      <th>left_ear_3_x</th>\n      <th>left_ear_3_y</th>\n      <th>right_ear_1_x</th>\n      <th>right_ear_1_y</th>\n      <th>right_ear_2_x</th>\n      <th>right_ear_2_y</th>\n      <th>right_ear_3_x</th>\n      <th>right_ear_3_y</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>00000001_000.jpg</td>\n      <td>103.0</td>\n      <td>98.0</td>\n      <td>140.0</td>\n      <td>97.0</td>\n      <td>123.0</td>\n      <td>130.0</td>\n      <td>53.0</td>\n      <td>73.0</td>\n      <td>62.0</td>\n      <td>30.0</td>\n      <td>93.0</td>\n      <td>50.0</td>\n      <td>136.0</td>\n      <td>49.0</td>\n      <td>173.0</td>\n      <td>31.0</td>\n      <td>159.0</td>\n      <td>69.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>00000001_008.jpg</td>\n      <td>115.0</td>\n      <td>68.0</td>\n      <td>152.0</td>\n      <td>67.0</td>\n      <td>135.0</td>\n      <td>100.0</td>\n      <td>65.0</td>\n      <td>43.0</td>\n      <td>74.0</td>\n      <td>0.0</td>\n      <td>105.0</td>\n      <td>20.0</td>\n      <td>148.0</td>\n      <td>19.0</td>\n      <td>185.0</td>\n      <td>1.0</td>\n      <td>171.0</td>\n      <td>39.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>00000001_012.jpg</td>\n      <td>127.0</td>\n      <td>97.0</td>\n      <td>164.0</td>\n      <td>96.0</td>\n      <td>147.0</td>\n      <td>129.0</td>\n      <td>77.0</td>\n      <td>72.0</td>\n      <td>86.0</td>\n      <td>29.0</td>\n      <td>117.0</td>\n      <td>49.0</td>\n      <td>160.0</td>\n      <td>48.0</td>\n      <td>197.0</td>\n      <td>30.0</td>\n      <td>183.0</td>\n      <td>68.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>00000001_016.jpg</td>\n      <td>63.0</td>\n      <td>114.0</td>\n      <td>100.0</td>\n      <td>113.0</td>\n      <td>83.0</td>\n      <td>146.0</td>\n      <td>13.0</td>\n      <td>89.0</td>\n      <td>22.0</td>\n      <td>46.0</td>\n      <td>53.0</td>\n      <td>66.0</td>\n      <td>96.0</td>\n      <td>65.0</td>\n      <td>133.0</td>\n      <td>47.0</td>\n      <td>119.0</td>\n      <td>85.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>00000001_024.jpg</td>\n      <td>111.0</td>\n      <td>140.0</td>\n      <td>148.0</td>\n      <td>139.0</td>\n      <td>131.0</td>\n      <td>172.0</td>\n      <td>61.0</td>\n      <td>115.0</td>\n      <td>70.0</td>\n      <td>72.0</td>\n      <td>101.0</td>\n      <td>92.0</td>\n      <td>144.0</td>\n      <td>91.0</td>\n      <td>181.0</td>\n      <td>73.0</td>\n      <td>167.0</td>\n      <td>111.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 157
     }
    ],
    "source": [
+    "columnNames = ['img_name', 'left_eye_x', 'left_eye_y', \n",
+    "               'right_eye_x', 'right_eye_y',\n",
+    "               'mouth_x', 'mouth_y', 'left_ear_1_x', 'left_ear_1_y',\n",
+    "               'left_ear_2_x', 'left_ear_2_y', 'left_ear_3_x', 'left_ear_3_y',\n",
+    "               'right_ear_1_x', 'right_ear_1_y', 'right_ear_2_x', 'right_ear_2_y',\n",
+    "               'right_ear_3_x', 'right_ear_3_y']\n",
+    "df = pd.DataFrame([], columns=columnNames)\n",
+    "\n",
     "for i in range(len(cat_df)):\n",
     "    #ensure points are positive\n",
+    "    img_name = cat_df.iloc[i, 0]\n",
     "    points = cat_df.iloc[i, 2:]\n",
     "    arr=[]\n",
     "    for num in points:\n",
@@ -398,8 +400,21 @@
     "    while True:\n",
     "        image, points = transformImage(i)\n",
     "        if points.size == 18:\n",
-    "            print('same images and points')\n",
-    "            break\n"
+    "            break\n",
+    "    \n",
+    "    #save image\n",
+    "    cv2.imwrite('cats_augmented/' + img_name, image)\n",
+    "    \n",
+    "    #save keypoints\n",
+    "    save_points = []\n",
+    "    save_points.append(img_name)\n",
+    "    for num in points:\n",
+    "        save_points.append(num[0])\n",
+    "        save_points.append(num[1])\n",
+    "    save_points = pd.Series(save_points, index=columnNames)\n",
+    "    df = df.append(save_points, ignore_index=True)\n",
+    "\n",
+    "df.head()"
    ]
   },
   {
