--- a/data_augmentation.ipynb
+++ b/data_augmentation.ipynb
@@ -417,7 +417,7 @@
    "outputs": [],
    "source": [
     "#Save dataframe as CSV\n",
-    "df.to_csv('augmentated_labels.csv',index=False)"
+    "df.to_csv('augmented_labels.csv',index=False)"
    ]
   },
   {
